[package]
authors = ["Mathieu Amiot <mathieu.amiot@yellowinnovation.fr>"]
categories = [
    "network-programming",
    "web-programming",
    "database",
]
description = "Actix actor for NATS Message Broker"
documentation = "https://docs.rs/actix-nats"
homepage = "https://github.com/YellowInnovation/actix-nats"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = [
    "actor",
    "nats",
    "actix",
]
license = "MIT/Apache-2.0"
name = "actix-nats"
readme = "README.md"
repository = "https://github.com/YellowInnovation/actix-nats"
version = "0.4.0"

[dependencies]
actix = "0.7"
backoff = "0.1"
futures = "0.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nitox = "0.1"

[dev-dependencies]
env_logger = "0.5"
